Cross-browser CSS fixes (#1064)
* Fix Auth

* Fix revision slider

* Extract Slider component

* Fix About dialog

* Fix placeholder color

* Hide clear input button

* Adjust Slider for Edge

* Fix clear search button in Firefox

* Fix RevisionSelector width when no scrollbar

(applicable to Firefox and Safari)

--- a/scss/inputs.scss
+++ b/scss/inputs.scss
@@ -10,6 +10,14 @@ textarea {
 input {
   -webkit-tap-highlight-color: transparent;
 
+  &::placeholder {
+    color: $gray;
+  }
+
+  &::-ms-clear {
+    display: none;
+  }
+
   // Make sure inputs that are readonly (i.e. tag list) are not selectable
   &[readonly] {
     user-select: none;
@@ -19,8 +27,4 @@ input {
 .transparent-input {
   color: inherit;
   background-color: transparent;
-
-  &::placeholder {
-    color: $gray;
-  }
 }
